Run and fix bug on mobile
kết nối mobile (share web)
sửa lỗi trên mobile thật

--- a/html/w3-band/assets/css/style.css
+++ b/html/w3-band/assets/css/style.css
@@ -73,6 +73,8 @@ html{
     margin-top: 15px;
     border: none;
     cursor: pointer;
+    appearance: none;
+    -webkit-appearance: none;
 }
 
 /* Main */
